--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,12 +8,16 @@
   --brand-color: #00a349;
   --highlight-color: #00db63;
   --hover-color: #01ff72;
+
+  --title-color: #000;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #1b1b1b;
     --foreground: #ededed;
+
+    --title-color: #fff;
   }
 }
 
