--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@ body, html {
   height: 100vh;
   margin: 0;
   padding: var(--page-padding);
+  overflow: hidden;
 }
 
 @media (prefers-color-scheme: dark) {
