--- a/src/app/components/card/card.module.css
+++ b/src/app/components/card/card.module.css
@@ -4,11 +4,11 @@
   --card-height: calc(var(--card-width) * 0.75);
   --card-padding: 16px;
   
-  --card-background: #202020;
+  --card-background: #1a1a1a;
   --card-lighter-background: color-mix(
     in srgb,
     var(--card-background) 5%,
-    black
+    #0b0b0b
   );
 
   background: radial-gradient(
@@ -43,7 +43,7 @@
 .iconWrapper {}
 
 .icon {
-  --card-icon-color: #46fd8f;
+  --card-icon-color: #00451f;
   display: inline-block;
   position: relative;
   transition-duration: 300ms;
@@ -72,7 +72,7 @@
 }
 
 .link {
-  --card-icon-color: #46fd8f;
+  --card-icon-color: #00a349;
   color: var(--card-icon-color);
   text-decoration: none;
   display: flex;
