--- a/src/app/components/header/header.module.css
+++ b/src/app/components/header/header.module.css
@@ -17,8 +17,16 @@
 
 .actions {
   display: flex;
+  align-items: center;
   justify-self: end;
   gap: 2rem;
+}
+
+.iconBtn {
+  height: max-content;
+  padding: .3rem;
+  border-radius: 50%;
+  line-height: 0;
 }
 
 .getStartedBtn {
@@ -26,4 +34,9 @@
   padding: .3rem 1rem;
   border-radius: .5rem;
   font-weight: 600;
+  transition: background-color .2s ease;
+
+  &:hover {
+    background-color: var(--hover-color);
+  }
 }
